objects/CSS_WS_MultiESN__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_BIS_2__c</fullName>
        <label>BIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>No BIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_BIS__c</fullName>
        <label>BIS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ESNCalibrationEnd__c</fullName>
        <label>ECM Calibration After</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ESNCalibrationStart__c</fullName>
        <label>ECM Calibration Before</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_EngineFamilyCode__c</fullName>
        <label>Engine Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_ApplicationCode__c</fullName>
        <label>Engine Application Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailureDate__c</fullName>
        <label>Failure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailurePointType__c</fullName>
        <label>Failure Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailurePoint__c</fullName>
        <label>Failure Point Qty</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_MultiESN__c</fullName>
        <label>Engine Serial No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ProductApplicationCode__c</fullName>
        <label>Product Application Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Revision_After__c</fullName>
        <label>Revision After</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Revision_Before__c</fullName>
        <label>Revision Before</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ServiceModel__c</fullName>
        <label>Service Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_UOMFail__c</fullName>
        <label>UOM Fail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_WarrantyStartDate__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty__c</fullName>
        <label>CSS_WS_Warranty</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipName>CSS_WS_MultiESNs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CSS WS MultiESN</label>
    <nameField>
        <label>SF MultiESN ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS MultiESNs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>